--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
+.slide-in{
+    scale: 100%;
+    transition: all 1s ease-in-out
+}
+
+.slide-out{
+    scale: 0;
+    transition: all 1s ease-in-out
+}
 
